1.26/05-postgresql/pgadmin/manifests/pgadmin.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: pgadmin-svc
  labels:
    name: postgres-operator
spec:
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
      nodePort: 30861
  selector:
    app: pgadmin
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:7.8
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
        resources:
          requests:
            memory: "100Mi"
            cpu: "0.2"
          limits:
            memory: "800Mi"
            cpu: "0.8"
        volumeMounts:
          - mountPath: /var/lib/pgadmin
            name: state
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: pgadmin-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  ingressClassName: system-ingress
  rules:
    - host: pg.k.erusnikov.ru
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pgadmin-svc
                port:
                  name: http
